--- a/index.html
+++ b/index.html
@@ -1,64 +1,76 @@
-<style>
-  body {
-    font-family: 'Neue Haas Unica', sans-serif;
-    background-color: #ffffff;
-    color: #000000;
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Newsletter Sign-Up</title>
+  <style>
+    body {
+      font-family: 'Neue Haas Unica', sans-serif;
+      background-color: #ffffff;
+      color: #000000;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-  .form-container {
-    width: 100%;
-    max-width: 400px; /* keeps it neat on iPad */
-    background: #fff;
-    padding: 20px;
-    border-radius: 16px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  }
+    .form-container {
+      width: 100%;
+      max-width: 400px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      text-align: center;
+    }
 
-  .form-container h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-    text-align: center;
-  }
+    .form-container img {
+      max-width: 160px; /* adjust size */
+      margin-bottom: 15px;
+    }
 
-  .form-container input {
-    width: 100%;
-    box-sizing: border-box; /* prevents overflow */
-    padding: 12px 14px;
-    margin-bottom: 12px;
-    border: 1px solid #ccc;
-    border-radius: 12px;
-    font-size: 1rem;
-  }
+    .form-container h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
 
-  .form-container button {
-    width: 100%;
-    padding: 14px;
-    border: none;
-    border-radius: 16px;
-    background-color: #ff7900;
-    color: #fff;
-    font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background 0.3s ease;
-  }
+    .form-container input {
+      width: 100%;
+      box-sizing: border-box;
+      padding: 12px 14px;
+      margin-bottom: 12px;
+      border: 1px solid #ccc;
+      border-radius: 12px;
+      font-size: 1rem;
+    }
 
-  .form-container button:hover {
-    background-color: #e86f00;
-  }
-</style>
+    .form-container button {
+      width: 100%;
+      padding: 14px;
+      border: none;
+      border-radius: 16px;
+      background-color: #ff7900;
+      color: #fff;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
 
-<div class="form-container">
-  <h2>Join Our Newsletter</h2>
-  <form action="https://hooks.zapier.com/hooks/catch/153915/u4vtjdv/" method="POST">
-    <input type="text" name="first_name" placeholder="First Name" required>
-    <input type="email" name="email" placeholder="Email Address" required>
-    <button type="submit">Sign Up</button>
-  </form>
-</div>
+    .form-container button:hover {
+      background-color: #e86f00;
+    }
+  </style>
+</head>
+<body>
+  <div class="form-container">
+    <!-- Replace logo.png with your actual logo file or hosted URL -->
+    <img src="logo.png" alt="Your Logo">
+    <h2>Join Our Newsletter</h2>
+    <form action="https://hooks.zapier.com/hooks/catch/153915/u4vtjdv/" method="POST">
+      <input type="text" name="first_name" placeholder="First Name" required>
+      <input type="email" name="email" placeholder="Email Address" required>
+      <button typ
